# calculator

./: .gitignore  CMakeLists.txt  Doxyfile  README  README.md  calculator-1.0-Alpha-Linux.deb  debugging.txt  hodnoceni.txt  skutecnost.txt
docs/: main.tex
include/: main.h  mainwindow.h  ui_mainwindow.h
lib/: mathLib.cpp
plan/: xpylypd00_xvesela00_xkremee00_xcomovj00_plan.txt
profiling/: README.md  ZPRAVA.txt  data_10.txt  data_100.txt  data_1000.txt  stddev.cpp
profiling/data/: data_10.txt
profiling/output/: callgrind.out.28750  callgrind.out.29108  callgrind.out.29384  callgrind_28750-report_10.dot  callgrind_29108-report_1000.dot  callgrind_29384-report_1000000.dot  gprof-report_10.dot  gprof-report_10.txt  gprof-report_1000.dot  gprof-report_1000.txt  gprof-report_1000000.dot  gprof-report_1000000.txt
src/: Doxyfile  advancedMathFunctionTests.cpp  calculator-1.0-Alpha-Linux.deb  calculator.desktop  main.cpp  mainMathFunctionTests.cpp  mainMathFunkceTests.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preinst.sh  stddev.cpp  stddev.desktop  ui_mainwindow.h
src/include/: main.h  mainwindow.h  ui_mainwindow.h
src/install/_packages/: calculator-1.0.0-Beta-Linux.deb
src/lib/: mathLib.cpp
